--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "myui",
-  "version": "0.1.0",
+  "name": "@arzivre/ui",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/arzivre"
+  },
+  "version": "0.0.1",
   "description": "my ui lib",
   "author": "Muhammad Sony Fauzi",
   "license": "MIT",
@@ -17,7 +20,7 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "^18.2.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
