--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "@arzivre/ui",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/arzivre"
-  },
   "version": "0.0.1",
   "description": "my ui lib",
   "author": "Muhammad Sony Fauzi",
@@ -27,5 +24,9 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/arzivre"
+  }
 }
