--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-dist
+.DS_Store
 node_modules
+.turbo
+*.log
+.next
+dist
+dist-ssr
+*.local
+.env
+.cache
+server/dist
+public/dist
+storybook-static/
