--- a/package.json
+++ b/package.json
@@ -1,32 +1,24 @@
 {
-  "name": "@arzivre/ui",
-  "version": "0.0.2",
-  "description": "my ui lib",
-  "author": "Muhammad Sony Fauzi",
-  "license": "MIT",
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "scripts": {
-    "ts-types": "tsc --emitDeclarationOnly --outDir dist",
-    "build": "rimraf dist && node ./esbuild.mjs && npm run ts-types"
+    "build": "turbo run build",
+    "dev": "turbo run dev --no-cache --parallel --continue",
+    "lint": "turbo run lint",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "turbo run build --filter=docs^... && changeset publish"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "esbuild": "^0.15.0",
-    "esbuild-node-externals": "^1.4.1",
-    "react": "^18.2.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.7.4"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0"
-  },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "files": [
-    "dist"
-  ],
-  "types": "dist/index.d.ts",
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://npm.pkg.github.com/arzivre"
+    "@changesets/cli": "^2.22.0",
+    "eslint": "^8.15.0",
+    "eslint-config-acme": "*",
+    "prettier": "^2.5.1",
+    "turbo": "latest"
   }
 }
