--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
-    "eslint": "^8.15.0",
+    "eslint": "^8.21.0",
     "eslint-config-acme": "*",
     "prettier": "^2.5.1",
-    "turbo": "latest"
+    "turbo": "^1.4.3"
   }
 }
