--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "release": "turbo run build --filter=docs^... && changeset publish"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.22.0",
-    "eslint": "^8.21.0",
-    "eslint-config-acme": "*",
-    "prettier": "^2.5.1",
-    "turbo": "^1.4.3"
+    "@changesets/cli": "latest",
+    "eslint": "latest",
+    "prettier": "latest",
+    "turbo": "latest"
   }
 }
