--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,15 +10,15 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "esbuild": "^0.15.0",
-    "esbuild-node-externals": "^1.4.1",
-    "react": "^18.2.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.7.4"
+    "@types/react": "latest",
+    "esbuild": "latest",
+    "esbuild-node-externals": "latest",
+    "react": "latest",
+    "rimraf": "latest",
+    "typescript": "latest"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "latest"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
