--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "latest",
-    "eslint": "latest",
+    "eslint": "^8.22.0",
     "prettier": "latest",
     "turbo": "latest"
   }
